--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroui/react": "^2.7.5",
+    "@svgr/webpack": "^8.1.0",
     "framer-motion": "^12.5.0",
     "next": "15.2.0",
     "react": "^19.0.0",
